@@ -36,6 +36,7 @@ import java.util.IdentityHashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.Properties;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.condition.EnabledIfSystemProperty;
 import org.junit.jupiter.api.io.TempDir;
@@ -106,10 +107,9 @@ class RecordingDemoTest {
             StringWriter writer = new StringWriter();
 
             long timestamp = System.currentTimeMillis() / 1000;
-            writer.write(String.format(
-                    "{\"version\": 2, \"width\": %d, \"height\": %d, \"timestamp\": %d, "
-                            + "\"title\": \"%s\", \"env\": {\"TERM\": \"xterm-256color\"}}%n",
-                    WIDTH, HEIGHT, timestamp, escapeJson(title)));
+            writer.write(("{\"version\": 2, \"width\": %d, \"height\": %d, \"timestamp\": %d, "
+                            + "\"title\": \"%s\", \"env\": {\"TERM\": \"xterm-256color\"}}%n")
+                    .formatted(WIDTH, HEIGHT, timestamp, escapeJson(title)));
 
             double currentTime = 0.0;
             for (Scene scene : scenes) {
@@ -130,7 +130,7 @@ class RecordingDemoTest {
         void writeSvgFrames(Path dir) throws IOException {
             Files.createDirectories(dir);
             for (int i = 0; i < scenes.size(); i++) {
-                Files.writeString(dir.resolve(String.format("frame-%02d.svg", i)), scenes.get(i).svg);
+                Files.writeString(dir.resolve("frame-%02d.svg".formatted(i)), scenes.get(i).svg);
             }
         }
 
@@ -179,7 +179,7 @@ class RecordingDemoTest {
                     case '\t' -> sb.append("\\t");
                     default -> {
                         if (c < 0x20) {
-                            sb.append(String.format("\\u%04x", (int) c));
+                            sb.append("\\u%04x".formatted((int) c));
                         } else {
                             sb.append(c);
                         }
@@ -449,7 +449,7 @@ class RecordingDemoTest {
                 List.of(),
                 deps,
                 List.of(),
-                new java.util.Properties(),
+                new Properties(),
                 null,
                 null);
         List<PilotProject> projects = List.of(proj);
